World, Petclinic demos, minor fixes